1909
This is mostly a duplicate of SI-1352.  The issue is not that you can't override them, but that you can't widen the visibility to public.  This works:
{code}
class A {
  class B {
    private[A] def x = 0
  }

  class C extends B {
    override private[A] def x = 1
    // or even this works
    // override protected[A] def x = 1
  }
}
{code}
My "mostly" qualifier above is because it doesn't look like you can override def y in your first example, because A is not an enclosing class inside B:
{code}
//   override protected[A] def y = 1
a.scala:9: error: A is not an enclosing class
  override protected[A] def y = 1
                            ^
//   override protected def y = 1
a.scala:9: error: method y overrides nothing
  override protected def y = 1
                         ^
//   override protected[B] def y = 1
a.scala:9: error: method B$$$$y overrides nothing
  override protected[B] def y = 1
                            ^
{code}
